--- a/css/style.css
+++ b/css/style.css
@@ -422,3 +422,124 @@ footer{
         height: 63px;
         margin-left: 50px;
     }
+
+
+/* Download */
+
+.video-conteiner{
+    margin-top:  5rem;
+}
+
+.video-conteiner video{
+    width: 100%;
+    aspect-ratio: 16/9;
+}
+
+
+/* About Game */
+
+.about-game{
+    margin-top: 2rem;
+    text-align: center;
+
+}
+
+.about-game h2{
+    display: inline-flex;
+    font-size: 1.9rem;
+    font-weight: 500;
+    border-bottom: 4px solid var(--main-color);
+}
+
+.about-game p{
+    font-size: 1rem;
+    margin-top: 1rem;
+    text-align: justify;
+    line-height: 28px;
+}
+.screenshots{
+    text-align: center;
+
+}
+.screenshots h2{
+    display: inline-flex;
+    font-size: 1.9rem;
+    font-weight: 500;
+    border-bottom: 4px solid var(--main-color);
+    margin: 1.6rem 0;
+    text-align: center;
+}
+
+.screenshots-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+    gap: 35px;
+    justify-content: center;
+    max-width: 800px;
+    margin: auto;
+    width: 100%;
+}
+
+.screenshots-content img{
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
+}
+
+.download{
+    max-width: 800px;
+    margin: auto;
+    width: 100%;
+    display: grid;
+    justify-content: center;
+    margin-top: 2rem;
+
+}
+
+.download h2{
+    text-align: center;
+    font-size: 1.9rem;
+    font-weight: 500;
+    margin: 1.6rem 0;
+}
+
+.download-links{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    margin-bottom: 2rem;
+}
+
+.download-links a{
+    text-align: center;
+    background: var(--main-color);
+    padding: 12px 20px;
+    color: var(--text-color);
+    letter-spacing: 1px;
+    font-weight: 500;
+}
+
+.download-links a:hover{
+    background-color: var(--dark-color);
+    transition: .3s all linear;
+}
+
+::-webkit-scrollbar{
+    display: none;
+}
+
+.progress{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    z-index: 300;
+}
+
+.scroll-bar{
+    height: 4px;
+    background-color: var(--main-color);
+    width: 50%;
+
+}
