--- a/css/style.css
+++ b/css/style.css
@@ -540,6 +540,159 @@ footer{
 .scroll-bar{
     height: 4px;
     background-color: var(--main-color);
-    width: 50%;
+    width: 0%;
 
+}
+
+
+@media (max-width: 1080px) {
+    .container{
+        margin: 0 auto;
+        width: 90%;
+    }
+
+    .nav{
+        padding: 10px 0;
+    }
+
+    .notification{
+        right: 4rem;
+    }
+
+    .menu img{
+        width: 500px;
+    }
+
+    section{
+        padding: 3rem 0 2rem;
+    }
+
+    .home{
+        margin-top: 4rem;
+        min-height: 220px;
+    }
+
+    .home img {
+        border-radius: 1rem;
+    }
+
+    .another_section{
+        grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    }
+    .video-conteiner{
+        margin-top: 5rem;
+    }
+}
+
+@media (max-width: 774px){
+    .notification {
+    right: 1rem;
+    }
+
+    menu img {
+    width: 400px;
+    }
+
+    .home {
+    min-height: 300px;
+    }
+
+    .home-text h1{
+    font-size: 2rem;
+    }
+
+    .btn{
+    padding: 12px 17px;
+    }
+
+    .screenshots-content {
+    grid-template-columns: repeat (auto-fit, minmax(250px, 300px));
+    }
+}
+
+@media (max-width: 560px){
+    .menu img{
+    display: none;
+    }
+
+    .nav{
+    padding: 8px 0;
+    }
+
+    .nav-icons .bx,
+    .menu-icon {
+    width: 40px;
+    height: 40px;
+    }
+
+    .home {
+    min-height: 240px;
+    }
+
+    .home-text{
+        padding-right: 1rem;
+    }
+    
+    .about-game p{
+        font-size: 875rem;
+    }
+    
+    .download-links{
+        grid-template-columns: 1fr;
+    }
+    
+    .copyright {
+        flex-direction: column;
+        align-items: center;
+        row-gap: 1rem;
+    }
+    .copyright .logo{
+        margin: 0;
+    } 
+}
+
+@media (max-width: 360px){
+    .logo {
+    font-size: 1.2rem;
+    }
+
+    .navbar a{
+        font-size: 1.3rem;
+    }
+
+    .navbar a:hover{
+    font-size: 1.4rem;
+    }
+
+    .notification{
+    width: 270px;
+    }
+
+    .home {
+    min-height: 214px;
+    }
+
+    .home-text h1{
+    font-size: 1.4rem;
+    }
+
+    .heading .bx{
+        padding: 8px;
+    }
+
+    .heading h2{
+     font-size: 1.1rem;
+    }
+    .box{
+     height: 420px;
+     }
+
+     .about h2,
+     .screenshots h2, 
+     .download h2{
+      font-size: 1.2rem;
+     }
+    .copyright p{
+    font-size: .75rem;
+    }
 }
